# aiHub

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: state.py
app/api/: __init__.py  main.py  schemas.py
app/enums/: action_type.py
app/models/: action_packet.py
app/network/: connection.py  manager.py  node.py
app/network/devices/: ai_device.py  room_hub.py
web/: app.js  index.html  styles.css
